crates/philo-tui/src/tests/snapshots/m5_tool_cards.snap
---
source: crates/philo-tui/src/tests/tool_cards.rs
expression: rendered
---
                                                                               │
    ❯ Fix the empty list when page > 5                                         │
                                                                               │
    ▎ Grep "page >" 3 matches ···································· ✓ done      │
      src/routes/users.ts:12: if (page > limit)                                │
      src/routes/users.ts:14: return []                                        │
      src/routes/users.test.ts:8: expect(users).toHaveLength(0)                │
                                                                               │
    ▎ Read src/routes/users.ts 2 files ··························· ✓ done      │
      src/routes/users.test.ts                                                 │
                                                                               │
    ▎ Edit src/routes/users.ts (+3 -2) ························ ✓ applied      │
      -  12│ if (page > limit)                                                 │
      -  13│   return []                                                       │
      +  12│ const size = Math.min(page, MAX_PAGE);                            │
      +  13│ if (page > size)                                                  │
      +  14│   return clampPage(page)                                          │
         15│ return users                                                      │
                                                                               │
    ▎ Run pnpm test 1 command ···································· ✓ done      │
      ok                                                                       │
      passed                                                                   │
                                                                               │
    All three paginated endpoints now clamp the page size.                     │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
───────────────────────────────────────────────────────────────────────────────
  ⠋ Writing (0s)                                                      gpt-5.2
╭─────────────────────────────────────────────────────────────────────────────╮
│ ❯ Ask anything                                                              │
╰─────────────────────────────────────────────────────────────────────────────╯
                                                          ↑-  ↓-  R-  C-  -/-
