crates/philo-tui/src/tests/snapshots/m6_command_menu.snap
---
source: crates/philo-tui/src/render/frame.rs
assertion_line: 1472
expression: rendered
---
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
                                                                               │
    ╭─────────────────────────────────────────────────────────────────────╮
    │Slash Commands                               Tab complete · ↑↓ select│
    │─────────────────────────────────────────────────────────────────────│
    │▎▶ /sessions  pick a session to continue                             │
    │   /status    session, model, usage and the tool lineup              │
    ╰─────────────────────────────────────────────────────────────────────╯
───────────────────────────────────────────────────────────────────────────────
  ● Ready                                                            gpt-test
╭─────────────────────────────────────────────────────────────────────────────╮
│ ❯ /s                                                                        │
╰─────────────────────────────────────────────────────────────────────────────╯
                                                          ↑-  ↓-  R-  C-  -/-
