crates/philo-tui/src/tests/snapshots/m6_confirmation.snap
---
source: crates/philo-tui/src/render/frame.rs
assertion_line: 1027
expression: rendered
---






                         ╭─ Approval required ───────╮
                         │                           │
                         │ write workspace file      │
                         │ path  src/auth/session.rs │
                         │                           │
                         │ y allow · n / esc deny    │
                         ╰───────────────────────────╯






                                                                    gpt-test
   ▌
   ▌ draft 中 文
   ▌
                                                             ↑- ↓- R- C- -/-
