crates/philo-tui/src/tests/snapshots/m6_model_picker.snap
---
source: crates/philo-tui/src/render/frame.rs
expression: rendered
---


          ╭─ Models · 1/3 ──────────────────────────────────────────╮
          │                                                         │
          │   ANTHROPIC                                             │
          │▎▶ anthropic/claude-sonnet-4-5                   current │
          │   anthropic/claude-opus-4-5                             │
          │   OPENAI                                                │
          │   openai/gpt-5.2                                        │
          │                                                         │
          │                                                         │
          │                                                         │
          │                                                         │
          │ enter select · tab reasoning · ↑↓ move · type filter ·. │
          ╰─────────────────────────────────────────────────────────╯



───────────────────────────────────────────────────────────────────────────────
  ● Ready                                                            gpt-test
╭─────────────────────────────────────────────────────────────────────────────╮
│ ❯ Ask anything                                                              │
╰─────────────────────────────────────────────────────────────────────────────╯
                                                          ↑-  ↓-  R-  C-  -/-
