crates/philo-tui/src/tests/snapshots/m6_session_picker.snap
---
source: crates/philo-tui/src/render/frame.rs
assertion_line: 1539
expression: rendered
---


          ╭─ Sessions · 1/3 ────────────────────────────────────────╮
          │                                                         │
          │▎▶ fix the flaky test on windows                     now │
          │     last: refactor the auth middleware to…              │
          │     one file                                            │
          │   s-auth                                             3m │
          │ • s-image                                            2d │
          │                                                         │
          │                                                         │
          │                                                         │
          │                                                         │
          │ enter select · ↑↓ move · type filter · esc close        │
          ╰─────────────────────────────────────────────────────────╯



───────────────────────────────────────────────────────────────────────────────
  ● Ready                                                            gpt-test
╭─────────────────────────────────────────────────────────────────────────────╮
│ ❯ Ask anything                                                              │
╰─────────────────────────────────────────────────────────────────────────────╯
                                                          ↑-  ↓-  R-  C-  -/-
