crates/philo-tui/src/tests/snapshots/markdown_code_fence.snap
---
source: crates/philo-tui/src/render/markdown.rs
expression: "render(&[\"```rust\", \"fn main() {}\", \"```\", \"between blocks\",\n\"```not-a-language\", \"* not a list *\", \"```\", \"after\",])"
---
```rust
  -> "```"{rgb(126, 140, 158)} "rust"{rgb(242, 117, 33)}
fn main() {}
  -> "1 "{rgb(90, 106, 124)} "│ "{rgb(42, 51, 61)} "fn"{rgb(166, 99, 54),bold} " "{rgb(197, 205, 217)} "main"{rgb(88, 129, 189),bold} "("{rgb(197, 205, 217)} ")"{rgb(197, 205, 217)} " "{rgb(197, 205, 217)} "{"{rgb(197, 205, 217)} "}"{rgb(197, 205, 217)}
```
  -> "```"{rgb(126, 140, 158)}

  -> ""
between blocks
  -> "between blocks"

  -> ""
```not-a-language
  -> "```"{rgb(126, 140, 158)} "not-a-language"{rgb(242, 117, 33)}
* not a list *
  -> "1 "{rgb(90, 106, 124)} "│ "{rgb(42, 51, 61)} "* not a list *"{rgb(197, 205, 217)}
```
  -> "```"{rgb(126, 140, 158)}

  -> ""
after
  -> "after"
