crates/philo-tui/src/tests/snapshots/markdown_elements.snap
---
source: crates/philo-tui/src/render/markdown.rs
expression: "render(&[\"# Title\", \"### Smaller\", \"plain paragraph text\", \"- first item\",\n\"  - nested item\", \"1. ordered item\", \"> quoted remark\",\n\"text with **bold**, *italic*, ~~struck~~ and `inline code`\",\n\"see [docs](https://example.test/guide)\", \"---\", \"\",])"
---
# Title
  -> "▍ "{magenta,bold,underlined} "Title"{magenta,bold,underlined}
### Smaller
  -> "▍ "{magenta,bold} "Smaller"{magenta,bold}
plain paragraph text
  -> "plain paragraph text"
- first item
  -> "- "{green} "first item"
  - nested item
  -> "  - "{green} "nested item"
1. ordered item
  -> "1. "{green} "ordered item"
> quoted remark
  -> "| "{darkgray} "quoted remark"{gray,italic}
text with **bold**, *italic*, ~~struck~~ and `inline code`
  -> "text with " "bold"{bold} ", " "italic"{italic} ", " "struck"{crossed} " and " "inline code"{lightgreen}
see [docs](https://example.test/guide)
  -> "see " "docs"{blue,underlined}
---
  -> "------------------------"{darkgray}

  -> ""
