crates/philo-tui/src/tests/snapshots/markdown_table_grid.snap
---
source: crates/philo-tui/src/render/markdown.rs
expression: "render(&[\"| plan | latency | notes |\", \"|---|---|---|\",\n\"| fast | 2ms | cached path |\",\n\"| slow | 200ms | hits the network every single time |\", \"\",\n\"back to prose\",])"
---
╭──────┬─────────┬────────────────────────────────────╮
  -> "╭"{rgb(42, 51, 61)} "──────"{rgb(42, 51, 61)} "┬"{rgb(42, 51, 61)} "─────────"{rgb(42, 51, 61)} "┬"{rgb(42, 51, 61)} "────────────────────────────────────"{rgb(42, 51, 61)} "╮"{rgb(42, 51, 61)}
│ plan │ latency │ notes                              │
  -> "│ "{rgb(42, 51, 61)} "plan"{rgb(166, 99, 54),bold} " │ "{rgb(42, 51, 61)} "latency"{rgb(166, 99, 54),bold} " │ "{rgb(42, 51, 61)} "notes"{rgb(166, 99, 54),bold} "                             " " │"{rgb(42, 51, 61)}
├──────┼─────────┼────────────────────────────────────┤
  -> "├"{rgb(42, 51, 61)} "──────"{rgb(42, 51, 61)} "┼"{rgb(42, 51, 61)} "─────────"{rgb(42, 51, 61)} "┼"{rgb(42, 51, 61)} "────────────────────────────────────"{rgb(42, 51, 61)} "┤"{rgb(42, 51, 61)}
│ fast │ 2ms     │ cached path                        │
  -> "│ "{rgb(42, 51, 61)} "fast" " │ "{rgb(42, 51, 61)} "2ms" "    " " │ "{rgb(42, 51, 61)} "cached path" "                       " " │"{rgb(42, 51, 61)}
│ slow │ 200ms   │ hits the network every single time │
  -> "│ "{rgb(42, 51, 61)} "slow" " │ "{rgb(42, 51, 61)} "200ms" "  " " │ "{rgb(42, 51, 61)} "hits the network every single time" " │"{rgb(42, 51, 61)}
╰──────┴─────────┴────────────────────────────────────╯
  -> "╰"{rgb(42, 51, 61)} "──────"{rgb(42, 51, 61)} "┴"{rgb(42, 51, 61)} "─────────"{rgb(42, 51, 61)} "┴"{rgb(42, 51, 61)} "────────────────────────────────────"{rgb(42, 51, 61)} "╯"{rgb(42, 51, 61)}

  -> ""

  -> 
back to prose
  -> "back to prose"
