crates/philo-tui/src/tests/snapshots/matrix_busy.snap
---
source: crates/philo-tui/src/tests/matrix.rs
assertion_line: 317
expression: matrix_render(build)
---
40 columns

   ▌ Check the flaky test

















    ⠋ Runn…  (openai) gpt-5.2 · high
   ▌
   ▌ Ask anything
   ▌
    D:\…\Pi     ↑11k ↓4.8k 2.2%/500k

80 columns

   ▌ Check the flaky test

















    ⠋ Running… 57s · esc cancel                      (openai) gpt-5.2 · high
   ▌
   ▌ Ask anything
   ▌
    D:\Code\Zed\Year2026\Jul0706\Pi         ↑11k ↓4.8k R14k C51.3% 2.2%/500k

120 columns

   ▌ Check the flaky test

















    ⠋ Running… 57s · esc cancel                                                              (openai) gpt-5.2 · high
   ▌
   ▌ Ask anything
   ▌
    D:\Code\Zed\Year2026\Jul0706\Pi                                                 ↑11k ↓4.8k R14k C51.3% 2.2%/500k
