crates/philo-tui/src/tests/snapshots/matrix_overlay.snap
---
source: crates/philo-tui/src/tests/matrix.rs
assertion_line: 332
expression: matrix_render(build)
---
40 columns






     ╭─ Approval required ───────╮
     │                           │
     │ write workspace file      │
     │ path  src/auth/session.rs │
     │                           │
     │ y allow · n / esc deny    │
     ╰───────────────────────────╯






             (openai) gpt-5.2 · high
   ▌
   ▌ draft 中 文
   ▌
    D:\…\Pi     ↑11k ↓4.8k 2.2%/500k

80 columns






                         ╭─ Approval required ───────╮
                         │                           │
                         │ write workspace file      │
                         │ path  src/auth/session.rs │
                         │                           │
                         │ y allow · n / esc deny    │
                         ╰───────────────────────────╯






                                                     (openai) gpt-5.2 · high
   ▌
   ▌ draft 中 文
   ▌
    D:\Code\Zed\Year2026\Jul0706\Pi         ↑11k ↓4.8k R14k C51.3% 2.2%/500k

120 columns






                                             ╭─ Approval required ───────╮
                                             │                           │
                                             │ write workspace file      │
                                             │ path  src/auth/session.rs │
                                             │                           │
                                             │ y allow · n / esc deny    │
                                             ╰───────────────────────────╯






                                                                                             (openai) gpt-5.2 · high
   ▌
   ▌ draft 中 文
   ▌
    D:\Code\Zed\Year2026\Jul0706\Pi                                                 ↑11k ↓4.8k R14k C51.3% 2.2%/500k
